<resources>
    <string name="app_name">My Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Statistic</string>
    <string name="title_notifications">Notofications</string>
    <!-- /-->
    <string name="label_for_input_date">Enter date</string>
    <string name="input_date" translatable="false">...</string>
    <string name="label_for_input_weight">Your weight</string>
    <string name="label_for_button_save">Save</string>
    <string name="title_my_tracker">My Tracker</string>
    <string name="label_for_input_medical">Medical today:</string>
    <string name="label_for_input_weight_units">kg</string>
    <string name="label_for_today_details">Describe how you feel during the day:</string>
    <string name="hint_optionaly">Optionaly</string>
    <string name="empty" translatable="false">...</string>
    <string name="toastTextSetDayError">Error: this date in the future</string>
    <string name="toastTextSaveCurrentDay">Current Day saved…</string>
    <string name="bottom_menu_title_tracker_button">Track!</string>
    <string name="descritpion_of_current_week_chart">Weight on a current week:</string>
    <string name="chart_message_no_data">No Data</string>
    <string name="chart_value_weight_unit">kg</string>
    <string name="chart_weight_legend">Weight</string>
    <string name="locale_stirng_lanfuage">en-US</string>
    <string-array name="day_of_week_array">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="int_value_week_day">1</string>
    <string name="label_for_average_weight">Average weight this week:</string>
    <string name="label_for_average_weight_ago">Average weight last week::</string>
    <string name="under_consrtuction">Page under construction</string>
    <string name="info_dialog_titile">About app</string>
    <string name="author">Author:</string>
    <string name="switch_theme_light_dark">Switch theme: </string>
    <string name="lina_rusakova">Lina Rusakova</string>
    <string name="app_description">The application shows on the graph of weight statistics this week, calculates the final average weight this week, and if it is higher / lower than the average weight for last weeks shows you with a color indicator.
 \n\nThe application allows you to record daily:\n
 - your weight,\n
 - information about the drugs taken,\n
 - other important information for you that can affect weight.\n\n
 Information for any day you can see by choosing a date on the calendar (tape the date for showing the calendar)</string>
    <string name="app_title_description">Description:</string>
    <string name="version">Version:</string>
    <string name="source_code">Source code:</string>
    <string name="open_source_github_link" translatable="false"><a href="https://github.com/lin-ru/mytracker">https://github.com/lin-ru/mytracker</a></string>
    <string name="toast_theme_cnaged">The theme has been changed</string>
    <string name="please_donate_link">If you liked the application, you can support the author and further development through the service: <a href="https://yoomoney.ru/to/4100110684467733"> Yoomoney</a></string>
    <string name="toastTextNoSaveZeroWeight">Please, input your weight before save!</string>
    <string name="info">Info</string>
    <string name="input_your_weight">Input your weight</string>
</resources>