<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrolvw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:context=".ui.dashboard.HomeFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewCurrentDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_date"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />


            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="4dp"
                    android:labelFor="@+id/editTextWeight"
                    android:text="@string/label_for_input_weight"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_marginStart="4dp"
                    android:background="?attr/colorControlHighlight"
                    android:ems="3"
                    android:foregroundGravity="center_vertical"
                    android:inputType="numberDecimal"
                    android:minHeight="50dp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/chart_value_weight_unit"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/label_for_button_save" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:labelFor="@+id/editTextTodayMedical"
                android:text="@string/label_for_input_medical"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTodayMedical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorControlHighlight"
                android:ellipsize="middle"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_optionaly"
                android:inputType="textMultiLine"
                android:minHeight="100dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:labelFor="@+id/editTextTodayDetails"
                android:text="@string/label_for_today_details"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTodayDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="55dp"
                android:background="?attr/colorControlHighlight"
                android:ellipsize="middle"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_optionaly"
                android:inputType="textMultiLine"
                android:minHeight="100dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>